add graphics and wrapper functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ export(MultiScale.simmap)
 export(RAC_query)
 export(add_noise_MD)
 export(add_pseudodata)
+export(anat_plot)
 export(color.bar)
 export(derivative_KDE)
 export(discr_Simmap)
 export(discr_Simmap_all)
 export(edge_profiles4plotting)
+export(edgeplot)
 export(estimate_band_W)
 export(estimate_edge_KDE)
 export(estimate_edge_KDE_Markov_kernel_unnorm)
@@ -25,6 +27,7 @@ export(make_contMap_KDE)
 export(make_data_NHPP_KDE_Markov_kernel)
 export(make_pic)
 export(make_postPois_KDE)
+export(mds_plot)
 export(merge_branch_cat)
 export(merge_tree_cat)
 export(merge_tree_cat_list)
@@ -37,6 +40,9 @@ export(posterior_lambda_KDE)
 export(posterior_lambda_KDE_Distr)
 import(RColorBrewer)
 import(dplyr)
+import(ggplot2)
+import(grid)
+import(phytools)
 importFrom(ape,Ntip)
 importFrom(magrittr,"%>%")
 importFrom(ontologyIndex,get_descendants)
