--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,8 @@ Language: en-US
 URL: https://github.com/diegosasso/ontophylo
 BugReports: https://github.com/diegosasso/ontophylo/issues
 Depends: R (>= 3.5.0)
-Imports: magrittr, dplyr, tidyr, tibble, stringdist, phytools, ontologyIndex, RColorBrewer, truncnorm, fANCOVA
-Suggests: grImport, ggplot2, rmarkdown, knitr, roxygen2
+Imports: magrittr, dplyr, tidyr, tibble, ggplot2, stringdist, phytools, ontologyIndex, RColorBrewer, grid, truncnorm, fANCOVA
+Suggests: grImport, rmarkdown, knitr, roxygen2
 VignetteBuilder: knitr
 Remotes: diegosasso/ontophylo
 LazyData: true
