--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,14 @@ URL: https://github.com/diegosasso/ontophylo
 BugReports: https://github.com/diegosasso/ontophylo/issues
 Depends: R (>= 3.5.0)
 Imports: magrittr, dplyr, tidyr, tibble, ggplot2, stringdist, phytools, ontologyIndex, RColorBrewer, grid, truncnorm, fANCOVA
-Suggests: grImport, rmarkdown, knitr, roxygen2
+Suggests: 
+    grImport,
+    rmarkdown,
+    knitr,
+    roxygen2,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Remotes: diegosasso/ontophylo
 LazyData: true
 RoxygenNote: 7.2.3
+Config/testthat/edition: 3
