Updates of final pre-release version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(MultiScale.simmap)
 export(RAC_query)
 export(add_noise_MD)
+export(add_pseudodata)
 export(anat_plot)
 export(color.bar)
 export(derivative_KDE)
@@ -31,12 +32,14 @@ export(merge_branch_cat)
 export(merge_tree_cat)
 export(merge_tree_cat_list)
 export(normalize_KDE)
+export(pNHPP)
 export(paramo)
 export(paramo.list)
 export(path_hamming_over_all_edges)
 export(path_hamming_over_trees_KDE)
 export(posterior_lambda_KDE)
 export(posterior_lambda_KDE_Distr)
+export(read_Simmap_Rev)
 import(RColorBrewer)
 import(dplyr)
 import(ggplot2)
