CRAN submission updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,10 +46,29 @@ import(ggplot2)
 import(grid)
 import(phytools)
 importFrom(ape,Ntip)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,rainbow)
+importFrom(grImport,grid.picture)
+importFrom(graphics,axis)
+importFrom(graphics,layout)
+importFrom(graphics,rect)
 importFrom(magrittr,"%>%")
 importFrom(ontologyIndex,get_descendants)
 importFrom(phytools,countSimmap)
 importFrom(purrr,set_names)
+importFrom(stats,bw.SJ)
+importFrom(stats,bw.bcv)
+importFrom(stats,bw.nrd)
+importFrom(stats,bw.nrd0)
+importFrom(stats,bw.ucv)
+importFrom(stats,cmdscale)
+importFrom(stats,loess.control)
+importFrom(stats,predict)
+importFrom(stats,qgamma)
+importFrom(stats,rgamma)
+importFrom(stats,runif)
+importFrom(stats,setNames)
+importFrom(stats,var)
 importFrom(stringdist,stringdistmatrix)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
