--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ontophylo
 Title: Ontology-Informed Phylogenetic Comparative Analyses
-Version: 1.0.0
+Version: 1.1.0
 Authors@R: 
     c(person(c("Diego", "S."), "Porto",
              email = "diegosporto@gmail.com",
@@ -21,13 +21,13 @@ Language: en-US
 URL: https://github.com/diegosasso/ontophylo
 BugReports: https://github.com/diegosasso/ontophylo/issues
 Depends: R (>= 3.5.0)
-Imports: magrittr, dplyr, tidyr, tibble, ggplot2, stringdist, phytools, ontologyIndex, RColorBrewer, grid, truncnorm, fANCOVA
+Imports: magrittr, dplyr, tidyr, purrr, tibble, ggplot2, stringdist, ape, phytools, ontologyIndex, RColorBrewer, grid, truncnorm, fANCOVA, grImport
 Suggests: 
-    grImport,
     rmarkdown,
     knitr,
     roxygen2,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+	stringr
 VignetteBuilder: knitr
 Remotes: diegosasso/ontophylo
 LazyData: true
