--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ontophylo
 Title: Ontology-Informed Phylogenetic Comparative Analyses
-Version: 1.1.1
+Version: 1.1.3
 Authors@R: 
-    c(person(c("Diego", "S."), "Porto",
+    c(person("Diego S.", "Porto",
              email = "diegosporto@gmail.com",
              role = c("aut", "cre"),
              comment = c(ORCID="0000-0002-1657-9606")
@@ -13,8 +13,8 @@ Authors@R:
              comment = c(ORCID="0000-0001-5237-2330")
              )
     )
-Description: Provides new tools for analyzing discrete trait data integrating 'bio-ontologies' and 'phylogenetics'. It expands on the previous work of 'Tarasov et al.' (2019). The 'PARAMO' pipeline allows to reconstruct ancestral 'phenomes' treating groups of morphological traits as a single complex character. The pipeline incorporates knowledge from 'ontologies' during the amalgamation of individual character stochastic maps.
-  Here we expand the current 'PARAMO' functionality by adding new statistical methods for inferring evolutionary 'phenome' dynamics using non-homogeneous Poisson process ('NHPP'). The new functionalities include: (1) reconstruction of evolutionary rate shifts of 'phenomes' across lineages and time; (2) reconstruction of 'morphospace' dynamics through time; and (3) estimation of rates of 'phenome' evolution at different levels of anatomical hierarchy (e.g., entire body or specific regions only). The package also includes user-friendly tools for visualizing evolutionary rates of different anatomical regions using vector images of the organisms of interest.
+Description: Provides new tools for analyzing discrete trait data integrating bio-ontologies and phylogenetics. It expands on the previous work of Tarasov et al. (2019) <doi:10.1093/isd/ixz009>. The PARAMO pipeline allows to reconstruct ancestral phenomes treating groups of morphological traits as a single complex character. The pipeline incorporates knowledge from ontologies during the amalgamation of individual character stochastic maps.
+  Here we expand the current PARAMO functionality by adding new statistical methods for inferring evolutionary phenome dynamics using non-homogeneous Poisson process (NHPP). The new functionalities include: (1) reconstruction of evolutionary rate shifts of phenomes across lineages and time; (2) reconstruction of morphospace dynamics through time; and (3) estimation of rates of phenome evolution at different levels of anatomical hierarchy (e.g., entire body or specific regions only). The package also includes user-friendly tools for visualizing evolutionary rates of different anatomical regions using vector images of the organisms of interest.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Language: en-US
